--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div id="content1">
         <h1>BMI Calculator</h1><br><br>
-        <input type="text" id="weight" placeholder="Enter the weight in killograms"><br><br><br>
-        <input type="text" id="height" placeholder="Enter the height in meters"><br><br><br>
+        <input type="text" id="weight" placeholder="Enter the weight in kilograms"><br><br><br>
+        <input type="text" id="height" placeholder="Enter the height in centimeters"><br><br><br>
         <div id="content2">Display your Result</div><br>
         <button id="output" onclick="exce()"> Click to see your result </button><br><br>
         <p onclick="ref()">click here to clear all</p>
