--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
-    <div class="animate1"></div>
-    <div id="content1">
+    <div class="container">
+    <div class="content1">
         <h1>BMI Calculator</h1>
         <input type="text" id="weight" placeholder="Enter the weight in killograms">
         <input type="text" id="lbs" placeholder="Enter the weight in lbs">
@@ -22,8 +21,7 @@
         <div id="content2">Display your Result</div>
         <button id="output" onclick="exce()"> Click to see your result </button><p onclick="ref()">click here to clear all</p>
         <script src="bmi.js"></script>
-    </div>
-    <div class="animate2"></div>    
+    </div>   
     </div>
 </body>
 </html>
