--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cousine&family=Tilt+Neon&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="bmi.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="img/BMI_logo.png" type="image/x-icon">
+    <title>BMI Calculator</title>
 </head>
 <body>
     <div class="container">
